# OpenCV

./: my_paint.cpp
C++/Paint/: README.md  my_paint  my_paint.cpp
C++/arrow_detect/: CMakeLists.txt  arrow_detect_cv.cpp
Python/: tennis_ball_detect.py
